# logstash-parser

./: .gitignore  LICENSE  Makefile  README.md  README_ZH.md  ast_nodes.py  peg.py  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  README.md  TESTING.md  USER_GUIDE.md
docs/logstash/: grammar.treetop
docs/zh_cn/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  README.md  README_ZH.md  TESTING.md  USER_GUIDE.md
scripts/: run_tests.sh
src/logstash_parser/: __init__.py  ast_nodes.py  grammar.py  schemas.py
tests/: README.md  __init__.py  conftest.py  test_ast_nodes.py  test_comprehensive.py  test_conversions.py  test_error_handling.py  test_from_logstash.py  test_from_python.py  test_helpers.py  test_integration.py  test_parser.py  test_schemas.py  test_to_logstash.py  test_to_source.py
tests/fixtures/: __init__.py  comprehensive_test.conf
